# trombone

./: .envrc  .gitignore  .nixignore  flake.nix
api/: Cargo.toml
api/migrations/: 20250808091946_schema.sql
api/src/: app_error.rs  app_state.rs  auth.rs  lib.rs  main.rs  router.rs
api/src/handlers/: client.rs  collection.rs  file.rs  firm.rs  request.rs  user.rs
api/src/model/: client.rs  collection.rs  file.rs  firm.rs  request.rs  user.rs
api/tests/: clients.rs  collections.rs  common.rs  files.rs  firms.rs  requests.rs  seed.sql  users.rs
src/: db.rs  handlers.rs  model.rs
src/handlers/: client.rs  collection.rs  file.rs  firm.rs  request.rs  user.rs
src/model/: file.rs  request.rs
tests/: clients.rs  collections.rs  common.rs  files.rs  requests.rs  seed.sql
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: .env  App.tsx  Router.tsx
ui/src/components/: Layout.tsx
ui/src/context/: ApiProvider.tsx
ui/src/hooks/: useApi.ts
ui/src/pages/: Overview.tsx
