[package]
name = "trombone"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
] }
anyhow = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
tower = { version = "0.4", features = ["util"] }
http = "1.1.0"
http-body-util = "0.1.2"
mime = "0.3.17"
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9.3.1"
